--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bedtimestorybook">
+    package="com.sharkBytesLab.nocoBedtimeStory">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_new_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BedtimeStoryBook">
-        <activity android:name=".Details">
+        <activity android:name="com.sharkBytesLab.nocoBedtimeStory.Details">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
+                android:value="com.sharkBytesLab.nocoBedtimeStory.MainActivity"/>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.sharkBytesLab.nocoBedtimeStory.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
