--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -9,8 +10,8 @@ android {
         applicationId "com.sharkBytesLab.nocoBedtimeStory"
         minSdkVersion 26
         targetSdkVersion 33
-        versionCode 1
-        versionName "1.0.1"
+        versionCode 2
+        versionName "2.1.26"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,4 +42,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.applovin:applovin-sdk:+'
+    implementation 'com.google.firebase:firebase-core:9.6.1'
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.google.firebase:firebase-config'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation "com.airbnb.android:lottie:5.2.0"
 }
